[package]
name = "kill-gong-fu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.7.2", features = ["macros", "default"] }
log = "0.4.16"
pretty_env_logger = "0.4.0"
tokio = { version = "1.17.0", features = ["full"] }
pinyin = "0.9.0"
once_cell = "1.10.0"
